# agent-ai

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  an-api.env.example  cli_chat.py  docker-compose.yml  ollama.env.example  package.json  pyproject.toml  requirements-ml.txt  requirements.txt
.github/workflows/: ci.yml
control-panel/: .dockerignore  Dockerfile  package-lock.json  package.json
control-panel/src/: App.tsx  index.css
control-panel/src/components/: ApprovalsBanner.tsx  ChatInterface.tsx  Dashboard.tsx  KeyValues.tsx  LogsPanel.tsx  MemoryPanel.tsx  OverviewPanel.tsx  PersonaPanel.tsx  SchedulePanel.tsx  SettingsPanel.tsx  SkillsPanel.tsx  ToolBadge.tsx  ToolsPanel.tsx  useAgentStream.ts
control-panel/src/lib/: api.ts  useCountUp.ts
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
lib/: agent-ai-cli.js  distill-cli.js
persona/: AGENTS.md  SOUL.md
scripts/: bootstrap.ps1  bootstrap.sh  install.ps1  install.sh  live_agent_smoke.py
skills/: _skill.py  server.py
src/: agent.py  approvals.py  artifacts.py  checkpointer.py  contract.py  eval_harness.py  evaluator.py  evolution.py  gateway.py  llm_utils.py  memory.py  persona.py  planning.py  proxy_auth.py  scheduler.py  session_store.py  skill_standard.py  sqlite_migrations.py  task_graph.py  tools.py  toolsets.py  tui.py
src/adapters/: __init__.py  _commands.py  _progress.py  _telegram_format.py  discord_bot.py  email_adapter.py  slack.py  telegram.py
src/auth/: __init__.py  __main__.py  oauth.py
src/builtin_skills/: std_rust_http_server.py
tests/: conftest.py  installer-cli.test.js  test_adapter_commands.py  test_agent_ai_cli.py  test_approvals.py  test_artifacts.py  test_contract_planning.py  test_coverage_boost.py  test_cron_delivery.py  test_discord_adapter.py  test_distillation.py  test_email_adapter.py  test_end_to_end.py  test_eval_harness.py  test_evolution.py  test_expose_local_http_service.py  test_gateway.py  test_gateway_auth.py  test_gateway_unit.py  test_http_sandbox.py  test_installers.py  test_memory.py  test_node_react_scenario.py  test_oauth.py  test_persistence_infrastructure.py  test_plan_contract_robustness.py  test_progress_format.py  test_property.py  test_publish_static_site.py  test_rust_server_scenario.py  test_sandbox_selfheal.py  test_scheduler.py  test_session_store.py  test_shell_platform.py  test_skill_evolution.py  test_skill_standard.py  test_slack_adapter.py  test_swarm.py  test_task_contract_loop.py  test_task_graph.py  (+4 more)
