[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-ai"
version = "0.1.0"
description = "A production-grade ReAct agent with task-contract execution, MCP tool integration, and skill distillation"
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src"]
omit = [
    # Excluded: requires live ChromaDB + Neo4j + sentence-transformers backends.
    # Integration-tested separately via test_memory.py when backends are available.
    "src/memory.py",
    # Excluded: evaluation harness (separate self-test binary, not unit-testable)
    "src/eval_harness.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# 62% threshold: accounts for gateway/agent/tools paths that need LLM + MCP servers.
# Pure-Python modules (contract, planning, llm_utils, checkpointer) are 80-92%.
fail_under = 62

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "RUF"]
ignore = ["E501", "B008", "RUF012"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
