[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-ai"
version = "0.1.0"
description = "A production-grade ReAct agent with task-contract execution, MCP tool integration, and skill distillation"
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src"]
omit = [
    # Excluded: requires live ChromaDB + Neo4j + sentence-transformers backends.
    # Integration-tested separately via test_memory.py when backends are available.
    "src/memory.py",
    # Excluded: evaluation harness (separate self-test binary, not unit-testable)
    "src/eval_harness.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# 61% line-coverage floor. The ceiling is bounded by gateway/agent/tools paths
# that need a live LLM + MCP servers to exercise; those are covered separately by
# the eval harness and integration tests. Pure-Python modules (contract,
# planning, llm_utils, checkpointer, evolution, task_graph) sit at 78-92%.
# Type safety is enforced independently by a full-tree mypy hard gate in CI.
fail_under = 61

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "RUF"]
ignore = ["E501", "B008", "RUF012"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.hypothesis]
# Keep property-test examples reproducible in CI; derandomize locally
# when debugging by setting HYPOTHESIS_SEED=0.
derandomize = false
suppress_health_check = ["too_slow"]
